--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ body {
     color: var(--text-color);
     background-repeat: no-repeat;
     padding: 0 14px;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
 }
 
 #card {
