--- a/style.css
+++ b/style.css
@@ -28,10 +28,12 @@ body {
     width: 100%;
     height: 100%;
     min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #card {
-    margin: 150px auto 50px;
     width: 100%;
     max-width: 500px;
     border-radius: 12px;
